--- a/src/components/Work.module.css
+++ b/src/components/Work.module.css
@@ -238,6 +238,14 @@
 
   .workLinks {
     margin-left: 0;
+    font-size: 7rem;
+
+  }
+}
+
+@media screen and (min-width: 2560px) {
+  .workLinks {
+    margin-left: 0;
     font-size: 14rem;
     line-height: 16rem;
   }
